@@ -1,3 +1,7 @@
+Mon May 19 12:28:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/odbc.c src/odbc/unittests/moreandcount.c:
+	- fixed more&count test
+
 Mon May 19 11:26:10 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/odbc.c src/tds/locale.c: cleanup
 
